# watson

./: .gitignore  README.md  mix.exs  pyproject.toml  watson
config/: config.exs  runtime.exs  test.exs
lib/: watson.ex
lib/watson/: application.ex  cli.ex  event_bus.ex  events.ex  session.ex  session_manager.ex  session_paths.ex
lib/watson/audio/: wav_writer.ex
lib/watson/capture/: device.ex  helper.ex  protocol.ex
lib/watson/transcription/: mlx_whisper.ex  postprocessor.ex  stream_worker.ex
native/macos_recorder/: Package.swift
native/macos_recorder/Sources/watson_recorder/: DeviceCatalog.swift  MicrophoneRecorder.swift  Permissions.swift  Recorder.swift  SampleEncoder.swift  StreamCapture.swift  SystemAudioRecorder.swift  main.swift
src/watson/: __init__.py  audio.py  cli.py  paths.py  pipeline.py  whisper.py
