[project]
name = "watson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bardoor", email = "dmitrybartenev58@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.3",
    "typer>=0.25.1",
]

[project.scripts]
watson = "watson.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"